# mdbook-summary-tools

./: Cargo.toml  README.md
src/: config.rs  discovery.rs  lib.rs  main.rs  model.rs  render.rs  titles.rs  validate.rs  writeback.rs
tests/: cli_smoke.rs  config_loading.rs  discovery.rs  e2e.rs  render_summary.rs  title_resolution.rs  validation.rs  writeback.rs
tests/fixtures/config/: book.toml
tests/fixtures/discovery/: book.toml
tests/fixtures/e2e/: book.toml
tests/fixtures/titles/: fallback-name.md  frontmatter.md  heading.md
tests/fixtures/writeback/: SUMMARY.md  book.toml
