[package]
name = "mdbook-summary-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.39", features = ["derive"] }
globset = "0.4.18"
mdbook-summary = "0.5.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"

[dev-dependencies]
assert_cmd = "2.0.17"
insta = "1.43.2"
